--- a/myapprc.yml
+++ b/myapprc.yml
@@ -14,7 +14,7 @@ spec:
         version: 2.7.01
     spec:
       containers:
-      - name: myjavaapp-container
+      - name: myapp-container
         image: maha4iac/mymahalogin:1
         ports:
         - containerPort: 8080
